--- a/Out.yaml
+++ b/Out.yaml
@@ -3,5 +3,6 @@ payload:
   - DOMAIN-KEYWORD,91p
   - DOMAIN-SUFFIX,freewallet.org
   - DOMAIN-SUFFIX,dbeaver.com
+  - DOMAIN-SUFFIX,dbeaver.io
   - DOMAIN-SUFFIX,pypi.org
   - DOMAIN-SUFFIX,vitejs.dev
